--- a/assets/css/regstyle.css
+++ b/assets/css/regstyle.css
@@ -185,7 +185,8 @@
 	}
 
 	.register_here .input-field input,.input-field select{
-		width: 100%
+		width: 100%;
+		font-size: 30px;
 	}
 
 	.register_here .input-field .gender-wrap label,
